--- a/src/grapher/pages/Descargar.module.css
+++ b/src/grapher/pages/Descargar.module.css
@@ -135,7 +135,7 @@
     border-radius: 1rem;
     font-size: 4rem;
 	text-decoration: none;
-	transition: all 0.5s ease-in-out 0.5s;
+	transition: all 1s ease-in-out;
 	padding: 1rem 8rem;
 }
 
@@ -149,9 +149,8 @@
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-.li > a:hover {
+.li:hover > a {
 	color: var(--dark-blue);
-    z-index: 1;
     background-color: var(--light-gray);
 }
 
