--- a/src/grapher/pages/Descargar.module.css
+++ b/src/grapher/pages/Descargar.module.css
@@ -117,7 +117,7 @@
     list-style: none;
 }
 
-.li {
+.li1 {
     margin: 3rem 0rem 0rem 0rem;
     height: 6rem;
     display: flex;
@@ -129,7 +129,7 @@
     transition: all 0.5s ease-in-out;
 }
 
-.li a {
+.li1 a {
 	color: var(--light-gray);
     background-color: var(--dark-blue);
     border-radius: 1rem;
@@ -140,7 +140,7 @@
 }
 
 /* animacion */
-.li:hover {
+.li1:hover {
 	background-color: var(--light-gray);
     border: 0.2rem solid var(--dark-blue);
 	transform: translateY(-1rem);
@@ -149,34 +149,16 @@
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-.li > a:hover  {
+.li1:hover > a {
+    z-index: 1;
+    background-color: transparent;
+}
+
+.li1 > a:hover  {
 	color: var(--dark-blue);
     background-color: var(--light-gray);
 }
 
-
-.li:after {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: -140%;
-	width: 130%;
-    z-index: 1;
-	height: 10rem;
-    color: var(--dark-blue);
-    background: var(--light-gray);
-	transition: all 0.5s ease-in-out;
-	-webkit-transition: all 0.5s ease-in-out;
-	-moz-transition: all 0.5s ease-in-out;
-	-ms-transition: all 0.5s ease-in-out;
-	-o-transition: all 0.5s ease-in-out;
-}
-
-.li:hover::after {
-	left: -25%;
-    z-index: 0;
-    color: var(--cuaternary-dark-blue);
-}
 
 .logo1 {
     justify-content: center;
@@ -201,10 +183,137 @@
     text-align: center;
     font-size: 6rem;
     font-weight: 800;
-    color: var(--dark-blue);
+    color: var(--dark-gray);
 }
 
+.li2 {
+    margin: 3rem 0rem 0rem 0rem;
+    height: 6rem;
+    display: flex;
+    align-items: center;
+    border: 0.2rem solid transparent;
+    overflow: hidden;
+    position: relative;
+    border-radius: 1rem;
+    transition: all 0.5s ease-in-out;
+}
+
+.li2 a {
+	color: var(--light-gray);
+    background-color: var(--dark-gray);
+    border-radius: 1rem;
+    font-size: 4rem;
+	text-decoration: none;
+	transition: all 1s ease-in-out;
+	padding: 1rem 8rem;
+}
+
+/* animacion */
+.li2:hover {
+	background-color: var(--light-gray);
+    border: 0.2rem solid var(--dark-gray);
+	transform: translateY(-1rem);
+	color: var(--dark-gray);
+    z-index: 1;
+	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+.li2 > a:hover  {
+	color: var(--dark-gray);
+    background-color: var(--light-gray);
+}
+
+
+/*
+.li2:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: -140%;
+	width: 130%;
+    z-index: -1;
+	height: 10rem;
+    color: var(--dark-gray);
+    background: var(--light-gray);
+	transition: all 0.5s ease-in-out;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+}
+    
+
+.li2:hover::after {
+	left: -25%;
+    z-index: 0;
+    color: var(--light-dark-gray);
+}
+    */
+
 .logo2 {
+    justify-content: center;
+    text-align: center;
+    height: 20rem;
+    width: 30rem;
+}
+
+.download2 {
+    display: grid;
+    place-items: center;
+    justify-content: center;
+    text-align: center;
+    grid-template-columns: 1.5fr 1fr; 
+    gap: 16rem;
+    margin: 0rem 3rem;
+    padding: 0;
+}
+
+.title3 {
+    justify-self: center;
+    text-align: center;
+    font-size: 6rem;
+    font-weight: 800;
+    color: var(--purple);
+}
+
+.li3 {
+    margin: 3rem 0rem 0rem 0rem;
+    height: 6rem;
+    display: flex;
+    align-items: center;
+    border: 0.2rem solid transparent;
+    overflow: hidden;
+    position: relative;
+    border-radius: 1rem;
+    transition: all 0.5s ease-in-out;
+}
+
+.li3 a {
+	color: var(--light-gray);
+    background-color: var(--purple);
+    border-radius: 1rem;
+    font-size: 4rem;
+	text-decoration: none;
+	transition: all 1s ease-in-out;
+	padding: 1rem 8rem;
+}
+
+/* animacion */
+.li3:hover {
+	background-color: var(--light-gray);
+    border: 0.2rem solid var(--purple);
+	transform: translateY(-1rem);
+	color: var(--purple);
+    z-index: 1;
+	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+.li3 > a:hover  {
+	color: var(--purple);
+    background-color: var(--light-gray);
+}
+
+.logo3 {
     justify-content: center;
     text-align: center;
     height: 20rem;
