--- a/src/grapher/pages/Descargar.module.css
+++ b/src/grapher/pages/Descargar.module.css
@@ -1,10 +1,9 @@
 .parentContainer {
-    height: calc(218vh - 12rem - 2.7rem);
     width: 100vw;
     background-color: var(--light-gray);
     display: flex;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.4fr 3fr 0.4fr;
+    grid-template-rows: 0.1fr 4fr 0.4fr;
     justify-content: center;
     margin: 0;
     padding: 0;
@@ -12,7 +11,6 @@
 
 .container {
     background-color:#EAEDEF;
-    height: calc(218vh - 12rem - 2.7rem);
     display: grid;
     place-items: center;
     justify-content: center;
@@ -85,7 +83,7 @@
     justify-content: center;
     text-align: center;
     grid-template-columns: 1.5fr 1fr; 
-    gap: 16rem;
+    gap: 9rem;
     margin: 0rem 3rem;
     padding: 0;
 }
@@ -173,7 +171,7 @@
     justify-content: center;
     text-align: center;
     grid-template-columns: 1.5fr 1fr; 
-    gap: 16rem;
+    gap: 9rem;
     margin: 0rem 3rem;
     padding: 0;
 }
@@ -316,7 +314,7 @@
 .logo3 {
     justify-content: center;
     text-align: center;
-    margin: 0rem 0rem 0rem -5rem;
+    margin: 0rem 0rem 0rem 0rem;
     height: 20rem;
     width: 30rem;
 }
@@ -424,7 +422,7 @@
 .logo4 {
     justify-content: center;
     text-align: center;
-    margin: 0rem 0rem 0rem -5rem;
+    margin: 0rem 0rem 0rem 0rem;
     height: 20rem;
     width: 30rem;
 }
@@ -441,28 +439,28 @@
     padding: 0 0.5rem;
 }
 
-.learnLink:hover{
-  background:#8c6abb22;
-  color:var(--purple);
+.learnLink2:hover{
+  background:#47624222;
+  color:var(--dark-green);
 }
 
-.learnLink:before{
+.learnLink2:before{
   content:'';
   position:absolute;
   top:-0.3rem;
   right:0;
   height:0.28rem;
   width:0;
-  background: var(--purple);
+  background: var(--dark-green);
   transition:600ms ease all;
 }
-.learnLink:after{
+.learnLink2:after{
   right:inherit;
   top:inherit;
   left:0;
   bottom:0.1rem;
 }
-.learnLink:hover:before,.learnLink:hover:after{
+.learnLink2:hover:before,.learnLink:hover:after{
   width:100%;
   transition:600ms ease all;
 }
