--- a/src/grapher/pages/Ejercicios.module.css
+++ b/src/grapher/pages/Ejercicios.module.css
@@ -1,115 +1,103 @@
-.parentContainer {
-    width: 100vw;
-    background-color: var(--light-gray);
-    display: flex;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    justify-content: center;
-    gap: 0rem;
-    margin: 0;
-    padding: 0rem 0rem;
+.main_container {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	background-color: var(--light-gray);
 }
 
-.container {
-    width: 100vw;
-    display: grid;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    grid-template-columns: 50rem 94rem; 
-    grid-template-rows: 1fr;
-    max-width: 144rem;
-    gap: 0rem;
-    margin: 0;
-    padding: 0rem 0rem;
+/* ----------menu seccion-------------- */
+.blue {
+	background-color: var(--secundary-dark-blue);
+}
+.light_blue {
+	background-color: var(--terciary-dark-blue);
+}
+.temario {
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	width: 20%;
+	position: sticky;
+	top: 100px;
+	min-height: 100vh;
+	max-height: 100vh;
+	overflow-y: scroll;
+	.title_container {
+		background-color: var(--dark-blue);
+		min-height: 7.4rem;
+		display: flex;
+		align-items: center;
+		padding-left: 2rem;
+		.title {
+			justify-self: center;
+			align-self: center;
+			font-size: 3.2rem;
+			color: white;
+		}
+	}
+	.seccion_container {
+		padding: 1rem 0 2rem 2rem;
+		font-size: 1.6rem;
+
+		.tema_container {
+			margin-bottom: 2rem;
+		}
+		> .tema_container > .tema {
+			font-size: 1.6rem;
+			font-weight: 300;
+			padding-top: 1rem;
+		}
+		.seccion_subtemas_container {
+			list-style: none;
+			padding-left: 2rem;
+			li {
+				margin: 1rem 0;
+			}
+			> li > a > span {
+				font-size: 1.6rem;
+				font-weight: 300;
+				padding-top: 1rem;
+			}
+		}
+		a {
+			color: white;
+		}
+	}
 }
 
-.leftColumn {
-    background-color: transparent;
-    display: grid;
-    width: 50rem;
-    place-items: center;
-    justify-content: center;
-    text-align: left;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 8rem 44rem 140rem;
-    gap: 0;
+.seccion_last {
+	height: 100%;
 }
 
-
-
-.name {
-    background-color: var(--dark-blue);
-    width: 50rem;
-    text-align: left;
-    padding: 2rem 2rem;
-    color: var(--light-gray);
-    font-size: var(--header);
-    height: 8rem;
+/* ----------documentacion seccion---------- */
+.contenido {
+	min-height: 200vh;
+	width: 80%;
+	background-color: var(--light-gray);
+	padding: 2rem;
+	.header_title {
+		text-align: center;
+		font-size: 3.2rem;
+		color: var(--dark-blue);
+	}
+	.topic {
+		font-size: 2.6rem;
+		color: var(--dark-blue);
+		text-decoration: underline;
+		margin: 6rem 0 2rem;
+	}
+	.texto {
+		text-overflow: clip;
+		text-align: justify;
+		font-size: 1.8rem;
+		margin-bottom: 1rem;
+	}
+	.viñetas {
+		padding-left: 4rem;
+		list-style-type: square;
+	}
 }
 
-.container1 {
-    background-color: var(--dark-blue);
-    display: grid;
-    width: 50rem;
-    height: 8rem;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 1fr;
-    gap: 0rem;
-    margin: 0;
-    padding: 0rem 0rem;
-}
-
-.container2 {
-    background-color: var(--secundary-dark-blue);
-    display: grid;
-    width: 50rem;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 8rem 8rem 8rem 8rem 8rem;
-    gap: 1rem;
-    margin: 0;
-    padding: 0rem 0rem;
-}
-
-.theme1 {
-    color: var(--light-gray);
-    font-size: var(--title);
-    text-align: left;
-    place-content: left;
-    justify-content: start;
-    width: 48rem;
-    margin: 0rem 0rem 0rem 2rem;
-}
-
-.theme2 {
-    color: var(--light-gray);
-    font-size: var(--title);
-    text-align: justify;
-    place-content: start;
-    justify-content: start;
-    width: 40rem;
-    margin: 0rem 3rem 0rem 10rem;
-}
-
-.container3 {
-    background-color: var(--terciary-dark-blue);
-    display: grid;
-    width: 50rem;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 8rem 8rem 8rem 8rem 104rem;
-    gap: 1rem;
-    margin: 0;
-    padding: 0rem 0rem;
-}
 
 .rightColumn {
     display: grid;
