--- a/src/grapher/pages/Ejercicios.module.css
+++ b/src/grapher/pages/Ejercicios.module.css
@@ -69,43 +69,14 @@
 	height: 100%;
 }
 
-/* ----------documentacion seccion---------- */
-.contenido {
-	min-height: 200vh;
-	width: 80%;
-	background-color: var(--light-gray);
-	padding: 2rem;
-	.header_title {
-		text-align: center;
-		font-size: 3.2rem;
-		color: var(--dark-blue);
-	}
-	.topic {
-		font-size: 2.6rem;
-		color: var(--dark-blue);
-		text-decoration: underline;
-		margin: 6rem 0 2rem;
-	}
-	.texto {
-		text-overflow: clip;
-		text-align: justify;
-		font-size: 1.8rem;
-		margin-bottom: 1rem;
-	}
-	.viñetas {
-		padding-left: 4rem;
-		list-style-type: square;
-	}
-}
-
-
 .rightColumn {
-    display: grid;
+    width: 80%;
+    padding: 0rem;
+    display: flex;
     place-items: center;
     justify-content: center;
     text-align: center;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 10rem 20rem 5rem 20rem 5rem 20rem 8rem 20rem 8rem 20rem 8rem 20rem 8rem 20rem;
+    flex-direction: column;
 }
 
 .back {
@@ -114,18 +85,22 @@
 }
 
 .title {
+    padding: 3rem 0rem;
     font-size: 4.5rem;
     color: var(--dark-blue);
 }
 
 .text {
-    width: 85rem;
-    font-size: 2.2rem;
+    padding: 0.5rem 0rem;
+    width: 90%;
+    font-size: 1.8rem;
     text-align: justify;
+    line-height: 2;
 }
 
 .subsubtitle {
-    width: 85rem;
+    padding: 0.5rem 0rem;
+    width: 90%;
     font-size: 3rem;
     text-align: left;
     font-weight: 600;
