--- a/src/grapher/pages/Contribuir.module.css
+++ b/src/grapher/pages/Contribuir.module.css
@@ -20,7 +20,7 @@
     grid-template-rows: 20rem 35rem 50rem;
     max-width: 144rem;
     gap: 8rem;
-    margin: 0;
+    margin-top: 12rem;
     padding: 0rem 0rem;
 }
 
