--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -1,5 +1,5 @@
 .parentContainer {
-	height: calc(100vh - 12rem - 2.8rem);
+	height: calc(100vh - 2.8rem);
 	width: 100vw;
 	background-color: var(--light-gray);
 	display: flex;
@@ -18,7 +18,7 @@
 	grid-template-columns: 1fr 1.1fr;
 	max-width: 144rem;
 	gap: 0;
-	margin: 0;
+	margin: 12rem 0rem 2.8rem 0rem;
 	padding: 0;
 }
 
