--- a/src/ui/components/Navbar.module.css
+++ b/src/ui/components/Navbar.module.css
@@ -7,6 +7,7 @@
 	display: flex;
 	flex-direction: row;
 	height: 10rem;
+	width: 100vw;
 	align-items: center;
 	font-size: var(--font-sz-navbar);
 	padding: 0 2rem;
@@ -14,12 +15,13 @@
 	min-width: 102.4rem;
 	min-height: 10rem;
 	box-shadow: 0px 6px 19px 0px rgba(0, 0, 0, 0.75);
-	position: sticky;
+	position: fixed;
 	z-index: 1000;
 }
 
 .menu_container {
-	position: sticky;
+	position: relative;
+	margin: 0rem 4rem 0rem 0rem;
 }
 
 .navbar_container {
@@ -28,7 +30,7 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	position: sticky;
+	position: fixed;
 }
 .logo_desktop {
 	height: 7.6rem;
