--- a/src/grapher/pages/Documentacion.module.css
+++ b/src/grapher/pages/Documentacion.module.css
@@ -22,6 +22,7 @@
 	min-height: 100vh;
 	max-height: 100vh;
 	overflow-y: scroll;
+	max-width: 38.4rem;
 	.title_container {
 		background-color: var(--dark-blue);
 		min-height: 7.4rem;
@@ -71,6 +72,7 @@
 
 /* ----------documentacion seccion---------- */
 .contenido {
+	max-width: 153.6rem;
 	min-height: 200vh;
 	width: 80%;
 	background-color: var(--light-gray);
