--- a/src/grapher/pages/Documentacion.module.css
+++ b/src/grapher/pages/Documentacion.module.css
@@ -142,3 +142,59 @@
 		}
 	}
 }
+
+.menu_button {
+	display: none;
+	position: absolute;
+	top: 1rem;
+	left: 1rem;
+	background-color: var(--dark-blue);
+	color: white;
+	border: none;
+	padding: 10px 15px;
+	cursor: pointer;
+	z-index: 100;
+}
+.show_button {
+	transform: translateX(50vw);
+	-webkit-transform: translateX(50vw);
+	-moz-transform: translateX(50vw);
+	-ms-transform: translateX(50vw);
+	-o-transform: translateX(50vw);
+}
+.show {
+	transform: translateX(0); /* Lo mostramos */
+}
+
+@media screen and (max-width: 1024px) {
+	.temario {
+		position: fixed;
+		left: 0;
+		top: 100px;
+		height: 100vh;
+		width: 50vw;
+		max-width: none;
+		min-width: auto;
+		background-color: var(--light-gray);
+		z-index: 1;
+		transform: translateX(-100%);
+		transition: transform 0.3s ease-in-out;
+	}
+
+	.contenido {
+		width: 100%; /* Expande el contenido al 100% */
+		min-width: auto;
+	}
+
+	.menu_button {
+		position: fixed;
+		top: 1rem;
+		left: 1rem;
+		background-color: var(--primary-color);
+		color: white;
+		border: none;
+		padding: 10px 15px;
+		cursor: pointer;
+		z-index: 1100;
+	}
+}
