--- a/src/grapher/pages/Documentacion.module.css
+++ b/src/grapher/pages/Documentacion.module.css
@@ -21,7 +21,7 @@
 	align-items: stretch;
 	width: 20%;
 	position: sticky;
-	top: 100px;
+	top: 70px;
 	min-height: 100vh;
 	max-height: 100vh;
 	overflow-y: auto;
@@ -78,9 +78,9 @@
 	max-width: 153.6rem;
 	min-width: 82rem;
 	background-color: var(--light-gray);
-	padding: 2rem;
+	padding: 0.1rem 2rem;
 	position: sticky;
-	top: 100px;
+	top: 70px;
 	overflow: auto;
 
 	a {
