--- a/src/ui/components/Footer.module.css
+++ b/src/ui/components/Footer.module.css
@@ -5,12 +5,9 @@
 }
 
 .footer_container {
-    display: grid;
-    justify-content: center;
-    margin: 0rem 2rem;
+    display: flex;
+    margin: 0rem 1rem;
     padding: 0;
-    grid-template-columns: 4fr 1.8fr 0.1fr; /* Dos columnas del mismo tamaño */
-    gap: 0.8fr; /* Espacio entre las columnas */
 }
 
 .footerColumnLeft {
@@ -18,14 +15,39 @@
     margin: 0.5rem 0rem;
     font-size: var(--details);
     padding: 0;
+    width: 70vw;
+}
+
+.license_container{
+    display: flex;
+    flex-direction: row;
+    margin: 0rem 1rem;
+    padding: 0;
+}
+
+.footerColumnCenter {
+    justify-content: left;
+    margin: 0.5rem 0rem;
+    font-size: var(--details);
+    padding: 0;
+    width: 4vw;
+}
+
+.author_container{
+    display: flex;
+    flex-direction: row;
+    margin: 0rem 0rem;
+    justify-content: end;
+    padding: 0;
 }
 
 .footerColumnRight {
     text-align: right;
     justify-content: end;
-    margin: 0.5rem 0.5rem 0.5rem 15rem;
+    margin: 0.5rem 0.5rem 0.5rem 0rem;
     font-size: var(--details);
     padding: 0;
+    width: 24vw;
 }
 
 .footerContainerImage {
@@ -35,7 +57,7 @@
     margin: 0.5rem 0rem;
     padding: 0;
     font-size: var(--details);
-    max-width: 1.5rem;
+    max-width: 2vw;
 }
 
 .footerImage {
@@ -61,41 +83,48 @@
 /* ---- media querys ---- */
 
 @media screen and (max-width: 1024px) {
-    .footer_container {
-        grid-template-columns: 1.8fr 1.9fr 0.1fr; /* Dos columnas del mismo tamaño */
-        gap: 0rem; /* Espacio entre las columnas */
-        place-items: center;
+    .license_container{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
     }
-    
-    .footerColumnLeft {
-        margin: 0.5rem 0rem 0.5rem 1rem;
-    }
-    
-}
 
-@media screen and (max-width: 575px) {
-	.footer_container {
-        grid-template-columns: 1fr; /* Dos columnas del mismo tamaño */
-        grid-template-rows: 1fr 1fr 1fr;
-        gap: 0.5rem; /* Espacio entre las columnas */
-        place-items: center;
-        text-align: center;
-        padding: 1rem 0rem;
-    }
-    
     .footerColumnLeft {
-        justify-content: center;
-        width: 34rem;
-        margin: 0rem 0rem 0rem 1rem;
-        font-size: var(--details);
+        width: 60vw;
+        font-size: 1.1rem;
+    }
+
+    .footerColumnCenter {
+        width: 4vw;
+    }
+
+    .author_container{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
     }
 
     .footerColumnRight {
+        font-size: 1.1rem;
+        width: 35vw;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    
+    .footerColumnLeft {
         justify-content: center;
-        text-align: center;
-        margin: 0rem 0rem;
-        font-size: var(--details);
-        padding: 0;
+        width: 62vw;
+        font-size: 0.73rem;
+    }
+
+    .footerColumnCenter {
+        width: 1vw;
+    }
+
+    .footerColumnRight {
+        font-size: 0.73rem;
+        width: 36vw;
     }
 
     .footerContainerImage {
