--- a/src/grapher/components/Versionado.module.css
+++ b/src/grapher/components/Versionado.module.css
@@ -17,6 +17,7 @@
 
 .texto {
 	margin: 0rem 4rem 0 0;
+	color: var(--dark-blue);
 }
 .numberVersion {
 	/* margin-top: 3rem; */
@@ -43,10 +44,10 @@
 	font-size: 1.8rem;
 	padding: 0 2rem;
 	height: 3.5rem;
-	background-color: var(--light-blue);
+	background-color: var(--light-gray);
 	outline: none;
 	cursor: pointer;
-	box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.35);
+	box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, 0.35);
 	border-radius: 6px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
