--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -1,5 +1,7 @@
 body {
-  overflow: hidden; 
+  overflow: hidden; /* Hide scrollbars */
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .parentContainer {
@@ -10,6 +12,7 @@ body {
 	justify-content: center;
 	margin: 0;
 	padding: 0;
+	overflow: hidden; 
 }
 
 .container {
@@ -157,9 +160,13 @@ body {
     justify-content: center;
     text-align: center;
     place-items: center;
-    height: 40rem;
+    height: 34rem;
     width: 60rem;
     margin: 0rem 0rem 0rem 0rem;
+}
+
+video::-webkit-media-controls-panel {
+  width: 40px;
 }
 
 .learn {
