--- a/src/grapher/pages/Contribuir.module.css
+++ b/src/grapher/pages/Contribuir.module.css
@@ -2,26 +2,25 @@
     width: 100vw;
     background-color: var(--light-gray);
     display: flex;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20rem 20rem 50rem;
     justify-content: center;
-    gap: 8rem;
     margin: 0;
     padding: 6rem 0rem;
 }
 
 .container {
+    margin-top: 10rem;
+	height: auto;
+	min-height: 100vh;
     background-color:#EAEDEF;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     text-align: center;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 20rem 35rem 50rem;
     max-width: 144rem;
-    gap: 8rem;
-    margin-top: 7rem;
     padding: 0rem 0rem;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .title {
