--- a/src/grapher/pages/Descargar.module.css
+++ b/src/grapher/pages/Descargar.module.css
@@ -2,26 +2,25 @@
     width: 100vw;
     background-color: var(--light-gray);
     display: flex;
-    grid-template-columns: 1fr;
-    grid-template-rows: 6rem 24rem 24rem 24rem 24rem 5rem 4rem 5rem 4rem;
     justify-content: center;
-    gap: 8rem;
     margin: 0;
     padding: 2rem 0rem;
 }
 
 .container {
-    margin-top: 7rem;
+    margin-top: 10rem;
+    height: auto;
+	min-height: 100vh;
     background-color:#EAEDEF;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     text-align: center;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 6rem 24rem 24rem 24rem 24rem 5rem 4rem 5rem 4rem;
     max-width: 144rem;
-    gap: 8rem;
     padding: 2rem 0rem;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .name {
@@ -96,7 +95,7 @@
     grid-template-rows: 1fr 1fr;
     gap: 3rem;
     margin: 0rem;
-    width: 50vw;
+    width: 75rem;
 }
 
 .rightColumn {
