--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -17,20 +17,20 @@ body {
 
 .container {
 	background-color: #eaedef;
-	height: calc(100vh - 12rem - 2.8rem);
-	display: grid;
-	place-items: center;
+	height: calc(100vh - 2.8rem - 7rem);
+	display: flex;
+	align-items: center;
 	justify-content: center;
 	text-align: center;
-	grid-template-columns: 1fr 1.1fr;
 	max-width: 144rem;
-	gap: 0;
-	margin: 7rem 0rem 2.8rem 0rem;
+	width: clamp(36rem, 100vw, 144rem);
+	min-width: 36rem;
+	margin: 7rem 0rem 0rem 0rem;
 	padding: 0;
 }
 
 .column {
-	padding: 0;
+	padding: 0rem 5rem;
 	margin: 1rem 0rem;
 	justify-content: center;
 	place-items: center;
@@ -165,9 +165,6 @@ body {
     margin: 0rem 0rem 0rem 0rem;
 }
 
-video::-webkit-media-controls-panel {
-  width: 40px;
-}
 
 .learn {
 	justify-self: center;
@@ -215,16 +212,18 @@ video::-webkit-media-controls-panel {
 	transition: 600ms ease all;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1236px) {
 	.parentContainer {
-		height: calc(100vh - 12rem - 2.7rem);
+		padding: 0rem 0rem 0rem 0rem;
+		height: calc(100vh - 4rem);
 	}
 
 	.container {
-		height: calc(100vh - 12rem - 2.6rem);
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
+		height: calc(100v - 4rem - 7rem);
+		flex-direction: column;
 		text-align: center;
+		margin: 7rem 0rem 0rem 0rem;
+		padding: 0rem;
 	}
 
 	.column {
@@ -236,6 +235,7 @@ video::-webkit-media-controls-panel {
 	.name {
 		text-align: center;
 		justify-self: center;
+		font-size: var(--font-sz-logo);
 	}
 
 	.title {
@@ -269,16 +269,18 @@ video::-webkit-media-controls-panel {
 	}
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 690px) {
 	.parentContainer {
-		height: 100vh;
+		padding: 10rem 0rem 0rem 0rem;
+		height: auto;
 	}
 
 	.container {
-		height: 100vh;
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
+		flex-direction: column;
 		text-align: center;
+		margin: 0rem;
+		padding: 0rem;
+		height: auto;
 	}
 
 	.column {
@@ -312,15 +314,20 @@ video::-webkit-media-controls-panel {
 		width: 32rem;
 	}
 
-	.video {
+	.video1 {
 		margin: 1rem 1rem;
 		height: 20rem;
-		width: 35rem;
+		width: 90vw;
 	}
 
 	.learn {
 		justify-self: center;
 		margin: 1.5rem 3rem 1rem 3rem;
+		width: 80vw;
+		font-size: var(--body-text);
+	}
+
+	.learnLink {
 		font-size: var(--body-text);
 	}
 }
