--- a/src/grapher/pages/Contribuir.module.css
+++ b/src/grapher/pages/Contribuir.module.css
@@ -4,11 +4,10 @@
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 6rem 0rem;
+    padding: 0rem 0rem;
 }
 
 .container {
-    margin-top: 10rem;
 	height: auto;
 	min-height: 100vh;
     background-color:#EAEDEF;
@@ -18,9 +17,46 @@
     justify-content: center;
     text-align: center;
     max-width: 144rem;
+	width: clamp(36rem, 100vw, 144rem);
+	min-width: 36rem;
+	margin: 9rem 0rem 2rem 0rem;
     padding: 0rem 0rem;
     overflow-y: auto;
     overflow-x: hidden;
+}
+
+.row {
+    display: flex;
+    place-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 130rem;
+	width: clamp(30rem, 90vw, 130rem);
+	min-width: 30rem;
+    margin: 4rem 0rem;
+}
+
+.leftColumn {
+    place-items: center;
+    justify-content: left;
+    justify-self: left;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    max-width: 110rem;
+	width: clamp(30rem, 75vw, 110rem);
+	min-width: 30rem;
+    padding: 0rem 0rem 0rem 0rem;
+}
+
+.rightColumn {
+    padding: 0rem 0rem;
+    place-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 30rem;
+	width: clamp(20rem, 20vw, 30rem);
+	min-width: 20rem;
 }
 
 .title {
@@ -33,6 +69,9 @@
     color:var(--dark-blue);
     background-color: var(--light-gray);
     height: 10rem;
+    max-width: 100rem;
+	width: clamp(30rem, 70vw, 100rem);
+	min-width: 30rem;
 }
 
 .text {
@@ -40,84 +79,20 @@
     justify-content: center;
     justify-self: left;
     text-align: left;
-    margin: 0rem 3rem;
+    margin: 0rem 0rem;
     font-size: 1.9rem;
-    width: 90rem;
-}
-
-.leftColumn {
-    place-items: center;
-    justify-content: left;
-    justify-self: left;
-    text-align: left;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 6rem 14rem;
-    gap: 1rem;
-    width: 100rem;
-    margin: 0rem;
-}
-
-.leftColumn2 {
-    place-items: center;
-    justify-content: left;
-    justify-self: left;
-    text-align: left;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 18rem 20rem;
-    gap: 1rem;
-    width: 100rem;
-    margin: 0rem;
-}
-
-.leftColumn3 {
-    place-items: center;
-    justify-content: left;
-    justify-self: left;
-    text-align: left;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 26rem 20rem;
-    gap: 1rem;
-    width: 100rem;
-    margin: 0rem;
-}
-
-.rightColumn {
-    margin: 0rem 2rem;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.row1 {
-    display: grid;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    grid-template-columns: 100rem 30rem; 
-    grid-template-rows: 1fr;
-    gap: 8rem;
+    max-width: 100rem;
+	width: clamp(30rem, 70vw, 100rem);
+	min-width: 30rem;
 }
 
 .logo1 {
     justify-content: center;
     text-align: center;
     place-items: center;
-    height: 20rem;
-    width: 20rem;
-    margin: 0rem 9rem 0rem 0rem;
-}
-
-.row2 {
-    display: grid;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    grid-template-columns: 100rem 30rem; 
-    grid-template-rows: 1fr;
-    gap: 8rem;
+    height: 15rem;
+    width: 15rem;
+    margin: 0rem;
 }
 
 .title2 {
@@ -130,15 +105,18 @@
     color:var(--dark-blue);
     background-color: var(--light-gray);
     height: 18rem;
+    max-width: 100rem;
+	width: clamp(30rem, 70vw, 100rem);
+	min-width: 30rem;
 }
 
 .logo2 {
     justify-content: center;
     text-align: center;
     place-items: center;
-    height: 30rem;
-    width: 30rem;
-    margin: 0rem 12rem 0rem 0rem;
+    height: 20rem;
+    width: 20rem;
+    margin: 0rem;
 }
 
 .learnLink {
@@ -180,16 +158,6 @@
 	transition: 600ms ease all;
 }
 
-.row3 {
-    display: grid;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    grid-template-columns: 100rem 30rem; 
-    grid-template-rows: 1fr;
-    gap: 8rem;
-}
-
 .title3 {
     place-items: center;
     justify-content: center;
@@ -200,15 +168,18 @@
     color:var(--dark-blue);
     background-color: var(--light-gray);
     height: 26rem;
+    max-width: 100rem;
+	width: clamp(30rem, 70vw, 100rem);
+	min-width: 30rem;
 }
 
 .logo3 {
     justify-content: center;
     text-align: center;
     place-items: center;
-    height: 30rem;
-    width: 30rem;
-    margin: 0rem 9rem 0rem 0rem;
+    height: 20rem;
+    width: 20rem;
+    margin: 0rem 0rem 0rem 0rem;
 }
 
 @media screen and (max-width: 1024px) {
