--- a/src/ui/components/Navbar.module.css
+++ b/src/ui/components/Navbar.module.css
@@ -1,3 +1,10 @@
+.header_container {
+	display: flex;
+	flex-direction: column;
+	position: sticky;
+	min-height: fit-content;
+}
+
 .header {
 	background: linear-gradient(
 		90deg,
@@ -6,22 +13,23 @@
 	);
 	display: flex;
 	flex-direction: row;
-	height: 7rem;
+	height: 5rem;
+	min-height: 5rem;
 	width: 100vw;
+	min-width: 102.4rem;
 	align-items: center;
 	font-size: var(--font-sz-navbar);
 	padding: 0 2rem;
 	color: white;
-	min-width: 102.4rem;
-	min-height: 7rem;
 	box-shadow: 0px 6px 19px 0px rgba(0, 0, 0, 0.75);
-	position: fixed;
+	position: sticky;
 	z-index: 1000;
 }
 
 .menu_container {
 	position: relative;
 	margin: 0rem 4rem 0rem 0rem;
+	display: flex;
 }
 
 .navbar_container {
@@ -30,19 +38,34 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	position: fixed;
+	position: sticky;
 }
 
 .logo_desktop {
-	height: 5.5rem;
-	width: 21.3rem;
+	height: 4.5rem;
+	width: 20rem;
 }
 .logo_movil {
 	display: none;
 }
 
-.ul {
+.ul > li > a {
+	color: white;
+	text-decoration: none;
+	padding: 0.4rem 100% 0.4rem 0.5rem;
+	white-space: nowrap;
+}
+
+.menu_row {
 	display: flex;
+}
+
+.menu_column {
+	display: flex;
+	flex-direction: column;
+}
+
+.ul {
 	flex-direction: row;
 	list-style: none;
 }
@@ -52,18 +75,34 @@
 }
 
 .li {
-	/* margin: 0 2rem; */
 	height: 4rem;
 	display: flex;
 	align-items: center;
-	/* margin: 0 1rem;
-	padding: 1rem 1rem; */
 	transition: all 0.5s ease-in-out;
 	border: 1px solid transparent;
 	border-radius: 5px;
 	position: relative;
 	overflow: hidden;
 	margin: 0 1rem;
+}
+
+header ~ ul > li > a {
+	font-size: var(--body);
+	transition: all 0.4s ease-in-out;
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+}
+
+header ~ ul > li > a:hover {
+	background-color: var(--light-gray);
+	color: var(--dark-blue);
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
 }
 
 .menu_row > li > a {
@@ -106,9 +145,9 @@
 .menu_row > li::after {
 	content: "";
 	position: absolute;
-	top: 100%;
-	left: -120%;
-	width: 200%;
+	top: 140%;
+	left: -160%;
+	width: 280%;
 	height: 400%;
 	color: var(--dark-blue);
 	background: var(--light-gray);
@@ -132,16 +171,18 @@
 
 @media screen and (max-width: 1236px) {
 	/* ocultamos el menu principal */
+	.header_container {
+		margin-bottom: -2rem;
+	}
+
 	.menu_row {
 		display: none;
-	}
-	.logo_desktop {
-		height: 6.3rem;
-		width: 24.3rem;
 	}
 
 	/* modificamos un poco el header para adaptarlo a la vista tablet */
 	.header {
+		/* height: 2rem !important; */
+
 		background: linear-gradient(
 			90deg,
 			rgba(219, 219, 219, 1) 10%,
@@ -149,14 +190,17 @@
 		);
 		font-size: var(--font-sz-navbar);
 		min-width: 57.5rem;
-		min-height: 10rem;
+		/* min-height: 7rem; */
+		/* margin-bottom: 2rem; */
 	}
 
 	.menu {
 		display: none;
 		background: var(--dark-blue);
+		/* height: 100vh; */
 		flex-direction: column;
 		width: 100vw;
+		/* margin: 3rem 0; */
 		padding: 3rem 0 3rem 2rem;
 		min-width: 57.5rem;
 		border-top: 0.2rem solid var(--gray);
@@ -192,11 +236,6 @@
 		);
 		font-size: var(--font-sz-navbar);
 		min-width: 32rem;
-		min-height: 10rem;
-	}
-	.logo_desktop {
-		height: 5.5rem;
-		width: 21.2rem;
 	}
 
 	.menu {
