--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -5,7 +5,7 @@ body {
 }
 
 .parentContainer {
-	height: calc(100vh - 2.8rem);
+	height: calc(100vh - 2.8rem - 5rem);
 	width: 100vw;
 	background-color: var(--light-gray);
 	display: flex;
@@ -17,7 +17,7 @@ body {
 
 .container {
 	background-color: #eaedef;
-	height: calc(100vh - 2.8rem - 7rem);
+	height: calc(100vh - 2.8rem - 6rem);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -25,8 +25,8 @@ body {
 	max-width: 144rem;
 	width: clamp(36rem, 100vw, 144rem);
 	min-width: 36rem;
-	margin: 7rem 0rem 0rem 0rem;
-	padding: 0;
+	margin: 0rem 0rem 0rem 0rem;
+	padding: 0rem;
 }
 
 .column {
@@ -215,14 +215,14 @@ body {
 @media screen and (max-width: 1236px) {
 	.parentContainer {
 		padding: 0rem 0rem 0rem 0rem;
-		height: calc(100vh - 4rem);
+		height: calc(100vh - 4rem - 3rem);
 	}
 
 	.container {
-		height: calc(100v - 4rem - 7rem);
+		height: calc(100v - 4rem - 3rem);
 		flex-direction: column;
 		text-align: center;
-		margin: 7rem 0rem 0rem 0rem;
+		margin: 0rem;
 		padding: 0rem;
 	}
 
@@ -271,7 +271,7 @@ body {
 
 @media screen and (max-width: 690px) {
 	.parentContainer {
-		padding: 10rem 0rem 0rem 0rem;
+		padding: 4rem 0rem 0rem 0rem;
 		height: auto;
 	}
 
