--- a/src/grapher/pages/Acerca.module.css
+++ b/src/grapher/pages/Acerca.module.css
@@ -3,12 +3,12 @@
 	background-color: var(--light-gray);
 	display: flex;
 	justify-content: center;
-	margin: 0;
-	padding: 0;
+	margin: 0rem;
+	padding: 0rem;
 }
 
 .container {
-	margin-top: 10rem;
+	margin-top: 1rem;
 	height: auto;
 	min-height: 100vh;
 	background-color: var(--light-gray);
@@ -16,8 +16,12 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin: 7rem 0rem 2.8rem 0rem;
+	margin: 1rem 0rem 2.8rem 0rem;
 	overflow-y: auto;
+	max-width: 144rem;
+	width: clamp(36rem, 100vw, 144rem);
+	min-width: 36rem;
+	overflow-y: hidden;
 }
 
 .header {
@@ -45,23 +49,38 @@
 	}
 }
 
-.main_grid {
-	display: grid;
-	grid-template-columns: repeat(2, minmax(70.2rem));
-	grid-template-rows: repeat(3, 44rem);
-	row-gap: 8rem;
-	column-gap: 8rem;
+.main {
+	display: flex;
+	flex-direction: column;
 	background-color: var(--light-gray);
 	max-width: 144rem;
-	margin-bottom: 12rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
 }
 
-.img_app {
-	grid-column: 1;
-	grid-row: 1;
+.about1 {
+	display: flex;
+	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
+	flex-direction: row;
+	padding: 0rem;
+	margin: 0rem 0rem 5rem 0rem;
+	height: 40rem;
+}
+
+.img_container1 {
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+	margin: 0rem 2rem 0rem 0rem;
+	text-align: center;
+}
+
+.img_app1 {
 	border-radius: 22px;
-	width: 100%;
-	height: 44rem;
+	width: 55rem;
+	height: 40rem;
 	box-shadow: 0px 8px 19px 0px rgba(0, 0, 0, 0.75);
 	-webkit-border-radius: 22px;
 	-moz-border-radius: 22px;
@@ -70,8 +89,10 @@
 }
 
 .first_article {
-	grid-column: 2;
-	grid-row: 1;
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+	margin: 0rem 0rem 0rem 2rem;
 }
 
 .first_article,
@@ -92,60 +113,97 @@
 }
 
 .second_article {
-	grid-column: 1;
-	grid-row: 2;
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+	margin: 0rem 2rem 0rem 0rem;
 }
 
-.img_grafica3d {
-	grid-column: 2;
-	grid-row: 2;
-	width: 100%;
+.img_container2 {
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+	margin: 0rem 0rem 0rem 2rem;
+	text-align: center;
+}
+
+.img_app2 {
+	width: 55rem;
 	box-shadow: 0px 8px 19px 0px rgba(0, 0, 0, 0.75);
-	height: 44rem;
+	height: 40rem;
 	border-radius: 24px;
 	-webkit-border-radius: 24px;
 	-moz-border-radius: 24px;
 	-ms-border-radius: 24px;
 	-o-border-radius: 24px;
 }
-.img_grafica2d {
-	grid-column: 1;
-	grid-row: 3;
-	width: 100%;
-	height: 44rem;
-	box-shadow: 0px 8px 19px 0px rgba(0, 0, 0, 0.75);
-	border-radius: 24px;
-	-webkit-border-radius: 24px;
-	-moz-border-radius: 24px;
-	-ms-border-radius: 24px;
-	-o-border-radius: 24px;
+
+.about2 {
+	display: flex;
+	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
+	flex-direction: row;
+	padding: 0rem;
+	margin: 0rem 0rem 5rem 0rem;
+	height: 40rem;
+}
+
+.about3 {
+	display: flex;
+	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
+	flex-direction: row;
+	padding: 0rem;
+	margin: 0rem 0rem 2rem 0rem;
+	height: 40rem;
 }
 
 .third_article {
-	grid-column: 2;
-	grid-row: 3;
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+	margin: 0rem 0rem 0rem 2rem;
+}
+
+.img_container3 {
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+	margin: 0rem 2rem 0rem 0rem;
+	text-align: center;
+}
+
+.img_app3 {
+	width: 55rem;
+	height: 40rem;
+	box-shadow: 0px 8px 19px 0px rgba(0, 0, 0, 0.75);
+	border-radius: 24px;
+	-webkit-border-radius: 24px;
+	-moz-border-radius: 24px;
+	-ms-border-radius: 24px;
+	-o-border-radius: 24px;
 }
 
 @media screen and (max-width: 1280px) {
-	.main_grid {
-		grid-template-columns: repeat(2, 46rem);
-		grid-template-rows: repeat(2, 44rem) 30rem;
-		column-gap: 4rem;
-		row-gap: 4rem;
-	}
-	.img_app {
+	.first_article,
+	.second_article,
+	.third_article {
 		align-self: center;
-		height: 25rem;
-		width: 40rem;
+		h2 {
+			font-size: var(--header);
+			color: var(--dark-blue);
+			margin-bottom: 2rem;
+		}
+		p {
+			font-size: var(--subtitle);
+			color: var(--dark-gray);
+			text-align: justify;
+			margin-bottom: 3rem;
+		}
 	}
-	.img_grafica3d {
-		align-self: center;
-		height: 35rem;
-	}
-	.img_grafica2d {
-		align-self: center;
-		height: 30rem;
-	}
+
 }
 
 @media screen and (max-width: 1024px) {
@@ -172,51 +230,6 @@
 	.img_grafica2d {
 		align-self: center;
 		height: 25rem;
-	}
-}
-@media screen and (max-width: 768px) {
-	.main_grid {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		background-color: var(--light-gray);
-		max-width: 76.8rem;
-		padding: 0 2rem;
-		margin-bottom: 12rem;
-		gap: 0;
-	}
-	.img_app {
-		order: 1;
-		height: 40rem;
-	}
-	.first_article {
-		order: 2;
-	}
-	.img_grafica3d {
-		order: 3;
-		width: 100%;
-		height: 40rem;
-	}
-	.second_article {
-		order: 4;
-	}
-	.img_grafica2d {
-		order: 5;
-		height: 40rem;
-	}
-	.third_article {
-		order: 6;
-	}
-	.img_app,
-	.img_grafica3d,
-	.img_grafica2d {
-		margin-bottom: 2rem;
-	}
-	.first_article,
-	.second_article,
-	.third_article {
-		margin-bottom: 6rem;
 	}
 }
 
